-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
None
-
5.15.0
-
None
-
-
c177a394d (134-based-refactor)
Start simplebrowser with --enable-features=FormControlsRefresh to reproduce the crash.
Backtrace:
1 __pthread_kill (x86_64) /usr/lib/system/libsystem_kernel.dylib 0x7fff73e4833a 2 pthread_kill (x86_64) /usr/lib/system/libsystem_pthread.dylib 0x7fff73f04e60 3 abort (x86_64) /usr/lib/system/libsystem_c.dylib 0x7fff73dcf808 4 abort_message (x86_64) /usr/lib/libc++abi.dylib 0x7fff7102f458 5 __cxa_guard_acquire (x86_64) /usr/lib/libc++abi.dylib 0x7fff7102e687 6 ui::NativeThemeMac::instance() native_theme_mac.mm 168 0x1130d4181 7 ui::NativeTheme::GetInstanceForWeb() native_theme_mac.mm 158 0x1130d4159 8 ui::NativeThemeMac::NativeThemeMac() native_theme_mac.mm 308 0x1130d5265 9 ui::NativeThemeMac::NativeThemeMac() native_theme_mac.mm 285 0x1130d57f5 10 base::NoDestructor<ui::NativeThemeMac>::NoDestructor<>() no_destructor.h 54 0x1130d7445 11 base::NoDestructor<ui::NativeThemeMac>::NoDestructor<>() no_destructor.h 53 0x1130d4205 12 ui::NativeThemeMac::instance() native_theme_mac.mm 168 0x1130d4196 13 ui::NativeTheme::GetInstanceForWeb() native_theme_mac.mm 158 0x1130d4159 14 content::ThemeHelper::ThemeHelper() theme_helper.cc 19 0x118823f22 15 content::ThemeHelper::ThemeHelper() theme_helper.cc 18 0x118824055 16 base::NoDestructor<content::ThemeHelper>::NoDestructor<>() no_destructor.h 54 0x118825235 17 base::NoDestructor<content::ThemeHelper>::NoDestructor<>() no_destructor.h 53 0x118823ea5 18 content::ThemeHelper::GetInstance() theme_helper.cc 14 0x118823e72 19 content::RenderProcessHostImpl::OnProcessLaunched() render_process_host_impl.cc 4724 0x1181f569e 20 content::RenderProcessHostImpl::Init() render_process_host_impl.cc 1702 0x1181da6f5 ... <More>
Most probably resulted by https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/272747/7/chromium/ui/native_theme/native_theme_mac.mm change.
- relates to
-
QTBUG-79860 QtWebEngine: System colors are not rendered with --single-process
-
- Closed
-
For Gerrit Dashboard: QTBUG-84678 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
302997,2 | Enable NativeThemeAura on macOS too | 80-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |