Enable NativeThemeAura on macOS too

Required by the FormControlsRefresh feature

Change-Id: I8fb2b0fb0499941cab85538e61b2a5d6192e2178
Fixes: QTBUG-84678
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>