chromium/ui/native_theme/native_theme_mac.mm
@@ -153,8 +153,8 @@ namespace ui {
 
 // static
 NativeTheme* NativeTheme::GetInstanceForWeb() {
-//  if (features::IsFormControlsRefreshEnable())
-//    return NativeThemeAura::web_instance();
+  if (features::IsFormControlsRefreshEnabled())
+    return NativeThemeAura::web_instance();
   return NativeThemeMac::instance();
 }
 
